- include test_db as fixture

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,9 +1,11 @@
 [pytest]
-# к примеру хотим определить модуль как параметр, что б ереиспольховать его при тесте
+# к примеру хотим определить модуль как параметр, что б переиспользовать его при тесте
 DJANGO_SETTINGS_MODULE = e_commerce.settings
-# так же можем определить какие файлы можно использовать для теста с нахвания
+# так же можем определить какие файлы можно использовать для теста с названия
 ;python_files = testa_*.py
 python_files = test_*.py
 
 markers =
   selenium: selenium test
+
+# markers
